--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -15,16 +15,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Clang
-      uses: martinforre/clang-clang++@v1
+      
+    - name: Setup Clang
+      uses: egor-tensin/setup-clang@v1
       with:
-        clang-version: '18'
+        version: latest
+        platform: x64
 
-    - name: Install CMake
-      uses: scikit-build/cmake-action@v2
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v2
       with:
-        version: '3.30.4'
+        cmake-version: '3.16.x'
 
     - name: Configure CMake
       run: cmake -B build -G "Ninja" -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
