--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -27,11 +27,18 @@ jobs:
       with:
         cmake-version: '3.30.x'
 
-    - name: Configure CMake
-      run: cmake -B build -G "Ninja" -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+    - name: Prepare Directory
+      run: |
+        mkdir build
+        cd build
 
     - name: Build project
-      run: cmake .
+      run: cmake ..
 
     - name: Make
       run: make
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: windows-artifact
+        path: bin/endstone_stone_shuffle.dll
