--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,25 @@ set(ENDSTONE_SOURCES
         src/include/stone_shuffle.h
 )
 
+set(OUTPUT_NAME ${PROJECT_NAME})
+
+if(WIN32)
+    set(OS_NAME "windows")
+elseif(UNIX)
+    set(OS_NAME "linux")
+endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+    set(OUTPUT_NAME "${OUTPUT_NAME}_${OS_NAME}_debug")
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+    set(OUTPUT_NAME "${OUTPUT_NAME}_${OS_NAME}")
+endif()
+
 include(FetchContent)
 FetchContent_Declare(
         endstone
         GIT_REPOSITORY https://github.com/EndstoneMC/endstone.git
-        GIT_TAG main
+        GIT_TAG v0.5.4.1
 )
 FetchContent_MakeAvailable(endstone)
 
@@ -23,3 +37,5 @@ FetchContent_MakeAvailable(json)
 
 endstone_add_plugin(${PROJECT_NAME} ${ENDSTONE_SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
