--- a/.github/workflows/cmake-compile.yml
+++ b/.github/workflows/cmake-compile.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
+        os: [windows-latest, ubuntu-22.04]
         build_type: [Release, RelWithDebInfo]
 
     steps:
